// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots navigation & disclosure/ebay-carousel Continuous 1`] = `
<DocumentFragment>
  <div
    class="carousel"
  >
    <div
      class="carousel__container"
    >
      <button
        aria-disabled="true"
        class="carousel__control carousel__control--prev"
        disabled=""
      >
        <svg
          aria-hidden="true"
          class="icon icon--carousel-prev icon icon--chevron-left-12"
          focusable="false"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-chevron-left-12"
          />
        </svg>
      </button>
      <div
        class="carousel__viewport"
      >
        <ul
          class="carousel__list"
          style="transform: translate3d(0px, 0, 0);"
        >
          <li
            aria-hidden="false"
            class="carousel__snap-point"
            style="color: rgb(10, 28, 107); background: rgb(194, 245, 255); font-size: 24px; font-weight: bold; width: 200px; height: 120px; line-height: 120px; text-align: center; margin-right: 16px;"
          >
            Item 1
          </li>
          <li
            aria-hidden="false"
            class="carousel__snap-point"
            style="color: rgb(10, 28, 107); background: rgb(194, 245, 255); font-size: 24px; font-weight: bold; width: 200px; height: 120px; line-height: 120px; text-align: center; margin-right: 16px;"
          >
            Item 2
          </li>
          <li
            aria-hidden="false"
            class="carousel__snap-point"
            style="color: rgb(10, 28, 107); background: rgb(194, 245, 255); font-size: 24px; font-weight: bold; width: 200px; height: 120px; line-height: 120px; text-align: center; margin-right: 16px;"
          >
            Item 3
          </li>
          <li
            aria-hidden="false"
            class="carousel__snap-point"
            style="color: rgb(10, 28, 107); background: rgb(194, 245, 255); font-size: 24px; font-weight: bold; width: 200px; height: 120px; line-height: 120px; text-align: center; margin-right: 16px;"
          >
            Item 4
          </li>
          <li
            aria-hidden="false"
            class="carousel__snap-point"
            style="color: rgb(10, 28, 107); background: rgb(194, 245, 255); font-size: 24px; font-weight: bold; width: 200px; height: 120px; line-height: 120px; text-align: center; margin-right: 16px;"
          >
            Item 5
          </li>
          <li
            aria-hidden="false"
            class="carousel__snap-point"
            style="color: rgb(10, 28, 107); background: rgb(194, 245, 255); font-size: 24px; font-weight: bold; width: 200px; height: 120px; line-height: 120px; text-align: center; margin-right: 16px;"
          >
            Item 6
          </li>
          <li
            aria-hidden="false"
            class="carousel__snap-point"
            style="color: rgb(10, 28, 107); background: rgb(194, 245, 255); font-size: 24px; font-weight: bold; width: 200px; height: 120px; line-height: 120px; text-align: center; margin-right: 16px;"
          >
            Item 7
          </li>
          <li
            aria-hidden="false"
            class="carousel__snap-point"
            style="color: rgb(10, 28, 107); background: rgb(194, 245, 255); font-size: 24px; font-weight: bold; width: 200px; height: 120px; line-height: 120px; text-align: center; margin-right: 16px;"
          >
            Item 8
          </li>
          <li
            aria-hidden="false"
            class="carousel__snap-point"
            style="color: rgb(10, 28, 107); background: rgb(194, 245, 255); font-size: 24px; font-weight: bold; width: 200px; height: 120px; line-height: 120px; text-align: center; margin-right: 16px;"
          >
            Item 9
          </li>
          <li
            aria-hidden="false"
            class="carousel__snap-point"
            style="color: rgb(10, 28, 107); background: rgb(194, 245, 255); font-size: 24px; font-weight: bold; width: 200px; height: 120px; line-height: 120px; text-align: center;"
          >
            Item 10
          </li>
        </ul>
      </div>
      <button
        aria-disabled="true"
        class="carousel__control carousel__control--next"
        disabled=""
      >
        <svg
          aria-hidden="true"
          class="icon icon--carousel-next icon icon--chevron-right-12"
          focusable="false"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-chevron-right-12"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Storyshots navigation & disclosure/ebay-carousel Items Per Slide 1`] = `
<DocumentFragment>
  <div
    class="carousel carousel--slides carousel--peek"
  >
    <div
      class="carousel__container"
    >
      <button
        aria-disabled="true"
        class="carousel__control carousel__control--prev"
        disabled=""
      >
        <svg
          aria-hidden="true"
          class="icon icon--carousel-prev icon icon--chevron-left-12"
          focusable="false"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-chevron-left-12"
          />
        </svg>
      </button>
      <div
        class="carousel__viewport"
      >
        <ul
          class="carousel__list"
          style="transform: translate3d(0px, 0, 0);"
        >
          <li
            aria-hidden="false"
            class="carousel__snap-point"
            style="color: rgb(10, 28, 107); background: rgb(194, 245, 255); font-size: 24px; font-weight: bold; width: calc(33.333333333333336% - 10.666666666666666px); height: 120px; line-height: 120px; text-align: center; margin-right: 16px;"
          >
            Item 1
          </li>
          <li
            aria-hidden="false"
            class="demo-card"
            style="color: rgb(10, 28, 107); background: rgb(194, 245, 255); font-size: 24px; font-weight: bold; width: calc(33.333333333333336% - 10.666666666666666px); height: 120px; line-height: 120px; text-align: center; margin-right: 16px;"
          >
            Item 2
          </li>
          <li
            aria-hidden="false"
            class="demo-card"
            style="color: rgb(10, 28, 107); background: rgb(194, 245, 255); font-size: 24px; font-weight: bold; width: calc(33.333333333333336% - 10.666666666666666px); height: 120px; line-height: 120px; text-align: center; margin-right: 16px;"
          >
            Item 3
          </li>
          <li
            aria-hidden="false"
            class="carousel__snap-point"
            style="color: rgb(10, 28, 107); background: rgb(194, 245, 255); font-size: 24px; font-weight: bold; width: calc(33.333333333333336% - 10.666666666666666px); height: 120px; line-height: 120px; text-align: center; margin-right: 16px;"
          >
            Item 4
          </li>
          <li
            aria-hidden="false"
            class="demo-card"
            style="color: rgb(10, 28, 107); background: rgb(194, 245, 255); font-size: 24px; font-weight: bold; width: calc(33.333333333333336% - 10.666666666666666px); height: 120px; line-height: 120px; text-align: center; margin-right: 16px;"
          >
            Item 5
          </li>
          <li
            aria-hidden="false"
            class="demo-card"
            style="color: rgb(10, 28, 107); background: rgb(194, 245, 255); font-size: 24px; font-weight: bold; width: calc(33.333333333333336% - 10.666666666666666px); height: 120px; line-height: 120px; text-align: center; margin-right: 16px;"
          >
            Item 6
          </li>
          <li
            aria-hidden="false"
            class="carousel__snap-point"
            style="color: rgb(10, 28, 107); background: rgb(194, 245, 255); font-size: 24px; font-weight: bold; width: calc(33.333333333333336% - 10.666666666666666px); height: 120px; line-height: 120px; text-align: center; margin-right: 16px;"
          >
            Item 7
          </li>
          <li
            aria-hidden="false"
            class="demo-card"
            style="color: rgb(10, 28, 107); background: rgb(194, 245, 255); font-size: 24px; font-weight: bold; width: calc(33.333333333333336% - 10.666666666666666px); height: 120px; line-height: 120px; text-align: center; margin-right: 16px;"
          >
            Item 8
          </li>
          <li
            aria-hidden="false"
            class="demo-card"
            style="color: rgb(10, 28, 107); background: rgb(194, 245, 255); font-size: 24px; font-weight: bold; width: calc(33.333333333333336% - 10.666666666666666px); height: 120px; line-height: 120px; text-align: center; margin-right: 16px;"
          >
            Item 9
          </li>
          <li
            aria-hidden="false"
            class="carousel__snap-point"
            style="color: rgb(10, 28, 107); background: rgb(194, 245, 255); font-size: 24px; font-weight: bold; width: calc(33.333333333333336% - 10.666666666666666px); height: 120px; line-height: 120px; text-align: center;"
          >
            Item 10
          </li>
        </ul>
      </div>
      <button
        aria-disabled="true"
        class="carousel__control carousel__control--next"
        disabled=""
      >
        <svg
          aria-hidden="true"
          class="icon icon--carousel-next icon icon--chevron-right-12"
          focusable="false"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-chevron-right-12"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
